<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tallerclases2.crearCelular">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sistema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/so"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/color"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="number" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="guardar"
            android:text="@string/guardar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
