<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="com.example.android.tallerclases2.Reporte1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView96"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textSize="18sp" />
    </TableRow>

</TableLayout>
