<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tallerclases2.Reporte3">

    <TextView
        android:id="@+id/prom"
        android:layout_width="379dp"
        android:layout_height="29dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tabla"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="44dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>

